# tuplehelpers

./: .gitignore  CMakeLists.txt  README.md  for_each.hpp  functional.hpp  print.hpp  unpack.hpp  unpack_tuple.hpp  zip.hpp
details/: make_indexes.hpp  tuple_action.hpp
test/: a.out  test_fibonacii.cpp  test_for_each.cpp  test_functional.cpp  test_zip.cpp
